--- a/client/private/savedrecipes.jade
+++ b/client/private/savedrecipes.jade
@@ -2,20 +2,24 @@
   div(ng-controller="savedRecipes")
     md-button(ng-click="getSavedRecipes()" class="md-accent md-raised md-button") Get Saved Recipes
     md-tabs
-      md-tab(ng-repeat="recipe in recipes" label="{{recipe.name}}")
-        div
+      md-tab(ng-repeat="recipe in recipes" label="{{recipe.name}}" layout="column")
+        div(layout="row" layout-align="center")
           h2 {{recipe.name}}
+        div(layout="row" layout-align="center")
           ul Grains
             li(ng-repeat="grain in recipe.grains.added track by $index") {{grain.weight + ' lbs ' + grain.name}}
           ul Hops
             li(ng-repeat="hop in recipe.hops.added track by $index") {{hop.weight + ' oz ' + hop.Name + " Time: " + hop.hopTime}}
           ul Yeast 
             li {{recipe.yeast.ID + ' ' + recipe.yeast.Name}} 
-          ul Stats
-            li OG: {{recipe.og}}
-            li FG: {{recipe.fg}}
-            li ABV: {{recipe.abv}}
-            li IBUs: {{recipe.hops.ibu}}
-            li Color(SRM Morey): {{recipe.srm}}
-            li Diastatic Power: {{recipe.dp}}
+        div(layout="row" layout-align="center")
+          ul(class="mainCalcList" layout="row" layout-align="center")
+            li(class="calcList") OG: {{recipe.og}}
+            li(class="calcList") FG: {{recipe.fg}}
+            li(class="calcList") ABV: {{recipe.abv}}
+            li(class="calcList") IBUs: {{recipe.hops.ibu}}
+            li(class="calcList") Color(SRM Morey): {{recipe.srm}}
+            li(class="calcList") Diastatic Power: {{recipe.dp}}
+        div(layout="row" layout-align="center")
+          md-button(class="md-warn md-button") Delete Recipe
     
