--- a/client/private/savedrecipes.jade
+++ b/client/private/savedrecipes.jade
@@ -21,5 +21,11 @@
             li(class="calcList") Color(SRM Morey): {{recipe.srm}}
             li(class="calcList") Diastatic Power: {{recipe.dp}}
         div(layout="row" layout-align="center")
-          md-button(class="md-warn md-button") Delete Recipe
+          ul(class="mainCalcList" layout="row" layout-align="center")
+            li(class="calcList") Volume: {{recipe.volume}} gal
+            li(class="calcList") Attenuation: {{recipe.attenuation}}%
+            li(class="calcList") Efficiency: {{recipe.efficiency}}%
+        div(layout="row" layout-align="center")
+          md-button(class="md-warn md-button" ng-click="deleteRecipe(recipe)") Delete Recipe
+          md-button(class="md-primary md-button" ng-click="editRecipe(recipe)") Edit Recipe
     
