DBFG Calc styling fix

--- a/client/partials/dbsgcalc.jade
+++ b/client/partials/dbsgcalc.jade
@@ -13,7 +13,7 @@ div(class='dbfgCalculate')
         md-button(class="md-warn" id="clear" ng-click="clearAll()") Clear All
     
     .ppgListItems
-      md-grid-list(
+      md-grid-list(layout-align"center center"
         md-cols-sm="2" md-cols-md="4" md-cols-gt-md="6" md-cols-gt-lg="8"
         md-row-height="3:4"
         md-gutter="8px" md-gutter-gt-sm="4px")
