Update tests and layout

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html(ng-app='recipeCreator')
   head
     title RecipeMaker
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="shortcut icon" href='favicon.ico' type='image/x-icon')
     script(src='/vendors/angularjs/angular.min.js', type='text/javascript')
     link(rel='stylesheet', href='/vendors/angularcss/angular-material.min.css')
